Spring Boot : Logging concept

--- a/springBoot/logging-mvc-annotations-demo/src/main/resources/application.properties
+++ b/springBoot/logging-mvc-annotations-demo/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=logging-mvc-annotations-demo
 org.surja.logging-mvc-annotations-demo.loginSessions.enable = true
+
+#ROOT is for all the packages
+logging.level.ROOT=INFO
+
+#to set the logging level of specific class
+#logging.level.org.surja.loginService.LoginSessions=ERROR
+
+#if we want to store the logs in a file
+logging.file.name=logDetails/app.log
+
+#logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%t [clientId=%X{clientId} requestId=%X{requestId}]] - %msg%n
