Spring Boot : Spring MVC, Thymeleaf

--- a/springBoot/logging-mvc-annotations-demo/src/main/resources/application.properties
+++ b/springBoot/logging-mvc-annotations-demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=logging-mvc-annotations-demo
 org.surja.logging-mvc-annotations-demo.loginSessions.enable = true
 
 #ROOT is for all the packages
-logging.level.ROOT=INFO
+logging.level.ROOT=info
 
 #to set the logging level of specific class
 #logging.level.org.surja.loginService.LoginSessions=ERROR
@@ -10,4 +10,4 @@ logging.level.ROOT=INFO
 #if we want to store the logs in a file
 logging.file.name=logDetails/app.log
 
-#logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%t [clientId=%X{clientId} requestId=%X{requestId}]] - %msg%n
+#logging.pattern.console= %d{yyyy-MM-dd Hlogging.file.name=logDetails/app.logH:mm:ss} [%t [clientId=%X{clientId} requestId=%X{requestId}]] - %msg%n
