--- a/springBoot/spring-security-demo/src/main/resources/application.properties
+++ b/springBoot/spring-security-demo/src/main/resources/application.properties
@@ -1,6 +1,22 @@
 spring.application.name=spring-security-demo
 
 
-#spring.security.user.name=Surja
-#spring.security.user.password=Surja121
+#
+#spring.security.user.name=surja
+#spring.security.user.password=surja123
 #spring.security.user.roles=ADMIN
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=username 
+spring.datasource.password=password
+# DDL mode.
+spring.jpa.hibernate.ddl-auto=update
+# Whether to enable logging of SQL statements.
+spring.jpa.show-sql=true
+
+
+# redis for session management
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.session.store-type=redis
