Micro Services : added Eureka-Server

--- a/micro_Services/product-service/src/main/resources/application.properties
+++ b/micro_Services/product-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=product-service
+spring.application.name=PRODUCT-SERVICE
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} %-5level [%t] [requestId=%X{requestId}] %15c{1} - %msg%n
