--- a/micro_Services/restTemplate-feignClient-demo/src/main/resources/application.properties
+++ b/micro_Services/restTemplate-feignClient-demo/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.application.name=restTemplate-feignClient-demo
+spring.application.name=PROXY-SERVER
+
 server.port=9090
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [[requestId=%X{requestId}]] - %msg%n
 
-
+product.service.baseUrl=http://localhost:8080/product
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
